@@ -1,9 +1,15 @@
 Version 0.7.1-ALPHA
 	|- Compiler:  fixed third for argument is printed at the very begining
 	|- Compiler:  fixed objects require auto keyword inside of code
+	|- Compiler:  added static native functions
 	|- Compiler:  added external function references using the external keyword
 	|             static external [ async ] <TYPE> <IDENT> ( <ARGLIST> );
-	|- Compiler:  added static native functions
+	|- Compiler:  added vec3 object to OOS
+	|v- Compiler: added native functions to OOS
+	||-           isServer()
+	||-           sleep(scalar)
+	|\-           isDedicated()
+	|- stdLib:    added ::std::getPlayer static function to ::std::Man
 	
 Version 0.7.0-ALPHA
     |- Compiler:  fixed objects added using the using instruction where not
